gen/v25.1/rpk/rpk-profile-set.adoc
= rpk profile set
:description: rpk profile set

Set fields in the current rpk profile.

As in the create command, this command takes a list of key=value pairs to write
to the current profile.

The key can either be the name of a -X flag or the path to the field in the
profile's yaml format. For example, using --set tls.enabled=true OR --set
kafka_api.tls.enabled=true is equivalent. The former corresponds to the -X flag
tls.enabled, while the latter corresponds to the path kafka_api.tls.enabled in
the profile's yaml.

This command supports autocompletion of valid keys, suggesting the -X key
format. If you begin writing a YAML path, this command will suggest the rest of
the path.

You can also use the format 'set key value' if you intend to only set one key.

== Usage

[,bash]
----
rpk profile set [KEY=VALUE]+ [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for set.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===